fix dropdown too much width

--- a/packages/css/src/components/selectdropdown.scss
+++ b/packages/css/src/components/selectdropdown.scss
@@ -75,12 +75,11 @@
   }
 
   .options-card {
-    min-width: max-content;
     width: 100% !important;
     box-shadow: 0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12), 0 5px 5px -3px rgba(0, 0, 0, 0.2);
     max-height: 400px;
     overflow: auto;
-    @apply absolute z-20 mt-xs bg-white;
+    @apply absolute z-20 mt-xs bg-white max-w-full;
 
     p {
       padding-top: 14px;
